@@ -38,6 +38,9 @@ importFrom(plyr, alply)
 
 importFrom(animation, saveGIF, ani.options)
 
+importFrom(signal, butter, filtfilt)
+
+
 export(autoread.ids, bai.in, bai.out, ccf.series.rwl, chron, cms,
        combine.rwl, common.interval, corr.rwl.seg, corr.series.seg,
        crn.plot, detrend, detrend.series, ffcsaps, fill.internal.NA,
@@ -52,7 +55,7 @@ export(autoread.ids, bai.in, bai.out, ccf.series.rwl, chron, cms,
        write.tucson, plot.rwl, interseries.cor, summary.rwl, plot.crn,
        insert.ring, delete.ring, xskel.ccf.plot, xskel.plot, latexify,
        latexDate, rasterPlot, treeMean, rwl.report, print.rwl.report, 
-       plotRings,time.rwl,time.crn,csv2rwl)
+       plotRings,time.rwl,time.crn,csv2rwl,pass.filt)
 
 S3method(print, redfit)
 S3method(plot, rwl)
